feat: Add Prometheus metrics, community validation, and CI/CD
Metrics Infrastructure:
- Add BGPMetricsController for periodic metrics collection from gobgpd
- Add 15+ new Prometheus metrics for BGP stats (neighbors, RIB routes)
- Add per-neighbor metrics support (opt-in via --enable-per-neighbor-metrics)
- Add metrics collection health metrics (success/failure counters)

Community Validation:
- Add CRD-level pattern validation for communityList fields
- Add runtime validation for community value ranges (0-65535)
- Surface validation errors in status conditions (ConfigurationInvalid)
- Prevent invalid configs from being applied to gobgpd

CI/CD:
- Update CI workflow with Go 1.24 and Docker build verification
- Update release workflow to generate install.yaml manifest
- Add production daemonset using ghcr.io/purelb/k8gobgp image
- Update Dockerfile to use gobgp-netlink v1.1.1 release

Other:
- Add iproute2 to container for debugging (ip command)
- Fix netlink export rules not updating when community lists change
- Update PATH in daemonset to include /sbin
- Update documentation with new features and troubleshooting

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -100,16 +100,32 @@ jobs:
       - name: Generate manifests
         run: |
           mkdir -p dist
-          # Generate install manifest
+          VERSION=${GITHUB_REF_NAME}
+
+          # Generate CRDs
           cat config/crd/bases/*.yaml > dist/crds.yaml
+
+          # Generate RBAC
           cat config/rbac/*.yaml > dist/rbac.yaml
-          cat config/daemonset/*.yaml > dist/daemonset.yaml
+
+          # Generate production daemonset with versioned image tag
+          sed "s|ghcr.io/purelb/k8gobgp:latest|ghcr.io/purelb/k8gobgp:${VERSION}|g" \
+            config/daemonset/gobgp-daemonset-prod.yaml > dist/daemonset.yaml
+
+          # Generate all-in-one install manifest
+          echo "---" > dist/install.yaml
+          cat dist/crds.yaml >> dist/install.yaml
+          echo "---" >> dist/install.yaml
+          cat dist/rbac.yaml >> dist/install.yaml
+          echo "---" >> dist/install.yaml
+          cat dist/daemonset.yaml >> dist/install.yaml
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
           files: |
+            dist/install.yaml
             dist/crds.yaml
             dist/rbac.yaml
             dist/daemonset.yaml
