fix: Strip 'v' prefix from image tag in release manifests
The docker/metadata-action generates semver tags without the 'v' prefix
(e.g., 0.1.1), but GITHUB_REF_NAME includes it (e.g., v0.1.1).

This caused the daemonset to reference ghcr.io/purelb/k8gobgp:v0.1.1
while the actual image was tagged as ghcr.io/purelb/k8gobgp:0.1.1.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -100,7 +100,8 @@ jobs:
       - name: Generate manifests
         run: |
           mkdir -p dist
-          VERSION=${GITHUB_REF_NAME}
+          # Strip 'v' prefix from tag for docker image tag (v0.1.1 -> 0.1.1)
+          VERSION=${GITHUB_REF_NAME#v}
 
           # Generate CRDs (already has --- at start)
           cat config/crd/bases/*.yaml > dist/crds.yaml
