feat: Add dynamic BGP router ID resolution with auto-detection, templates, and hash fallback
Implement dynamic router ID resolution supporting three configuration methods:
explicit IPv4, template variables (${NODE_IP}, ${NODE_EXTERNAL_IP},
${node.annotations['key']}), and auto-detection with hash-based fallback
for IPv6-only nodes. Includes security controls (template injection
prevention, pool size validation, router ID immutability), Prometheus
metrics, Kubernetes events, pod annotations, node caching, and
comprehensive unit/e2e tests. Fixes lint issues (gosec G104, govet
shadow, gofmt) and adds routerIDPool validation to validateConfiguration.

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,11 +7,25 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
+  - nodes
   - secrets
   verbs:
   - get
   - list
   - watch
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - patch
 - apiGroups:
   - bgp.purelb.io
   resources:
