--- a/config/crd/bases/bgp.purelb.io_configs.yaml
+++ b/config/crd/bases/bgp.purelb.io_configs.yaml
@@ -110,6 +110,8 @@ spec:
                         type: object
                     type: object
                   asn:
+                    description: ASN is the Autonomous System Number for this BGP
+                      speaker
                     format: int32
                     type: integer
                   bindToDevice:
@@ -165,12 +167,26 @@ spec:
                         type: boolean
                     type: object
                   routerID:
+                    description: |-
+                      RouterID is the BGP router identifier. Must be a valid IPv4 address.
+                      Supports three resolution modes:
+                      1. Explicit IPv4: "192.168.1.1" - used as-is
+                      2. Template variable: "${NODE_IP}", "${NODE_IPV4}", "${NODE_EXTERNAL_IP}",
+                         or "${node.annotations['key']}" - resolved from node
+                      3. Auto-detect: when omitted, auto-detects from node's internal IPv4,
+                         or generates from node name hash if no IPv4 available
+                    type: string
+                  routerIDPool:
+                    description: |-
+                      RouterIDPool is the CIDR pool for hash-based router ID generation.
+                      Used when RouterID is omitted and node has no IPv4 address (IPv6-only nodes).
+                      Must be at least /24 (256 addresses). Each cluster should use a unique pool.
+                      Default: "10.255.0.0/16"
                     type: string
                   useMultiplePaths:
                     type: boolean
                 required:
                 - asn
-                - routerID
                 type: object
               neighbors:
                 items:
@@ -831,6 +847,15 @@ spec:
                   by the controller
                 format: int64
                 type: integer
+              routerIDResolutionTime:
+                description: RouterIDResolutionTime is when the router ID was resolved
+                format: date-time
+                type: string
+              routerIDSource:
+                description: |-
+                  RouterIDSource indicates how the router ID was resolved:
+                  "explicit", "template", "node-ipv4", or "hash-from-node-name"
+                type: string
             type: object
         type: object
     served: true
